Fixed scrolling when dynamic text box overflows max width

--- a/public/css/aiStyle.css
+++ b/public/css/aiStyle.css
@@ -4,20 +4,31 @@ body {
 
 /* RELATED to the display of dynamic responses and submissions */
 #responses-and-submissions-container {
+    display: flex;
+    flex-direction: column;
+    
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
 
     font-size: 120%;
+
+    /* vh is viewport height */
+    max-height: 600px; 
+    overflow-y: auto;
+
 }
 .user-submission {
     margin-left: auto;
     margin-bottom: 10px;
     max-width: 300px;
+
+    /* text-align: right; */
 }
-.ai-submission {
+.ai-response {
     margin-right: auto;
     margin-bottom: 10px;
+    max-width: 300px;
 }
 /* :D */
 
